--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "market",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "config-lite": "^2.1.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
@@ -23,6 +27,7 @@
     "mongoose": "^5.0.9",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
+    "time-formater": "^1.0.1",
     "winston": "^2.4.0"
   }
 }
