--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js",
+    "server": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,11 +26,14 @@
     "express-session": "^1.15.6",
     "express-winston": "^2.5.0",
     "formidable": "^1.2.0",
+    "gm": "^1.23.1",
     "marked": "^0.3.17",
     "moment": "^2.21.0",
     "mongoose": "^5.0.9",
+    "nodemailer": "^4.6.4",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
+    "svg-captcha": "^1.3.11",
     "time-formater": "^1.0.1",
     "winston": "^2.4.0"
   }
