--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.0",
     "express-winston": "^2.6.0",
+    "express-ws": "^4.0.0",
     "formidable": "^1.2.0",
     "gm": "^1.23.1",
     "marked": "^0.8.0",
@@ -33,5 +34,8 @@
     "svg-captcha": "^1.3.11",
     "time-formater": "^1.1.3",
     "winston": "^2.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
