--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "server": "nodemon index.js",
+    "serve": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -33,6 +33,8 @@
     "sha1": "^1.1.1",
     "svg-captcha": "^1.3.11",
     "time-formater": "^1.1.3",
+    "vue": "^2.6.11",
+    "vue-server-renderer": "^2.6.11",
     "winston": "^2.4.4"
   },
   "devDependencies": {
