--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
@@ -38,6 +37,7 @@
     "winston": "^2.4.4"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.2"
   }
 }
